--- a/react-app/src/components/card/card.module.css
+++ b/react-app/src/components/card/card.module.css
@@ -15,7 +15,7 @@
   color: rgba(117, 117, 117, 1);
   display: flex;
   flex-direction: row;
-  align-items:center;
+  align-items: center;
   margin-bottom: 12px;
 }
 
@@ -45,7 +45,7 @@ img {
 }
 
 .category {
-  color: rgba(41, 41, 41, 1)
+  color: rgba(41, 41, 41, 1);
 }
 
 .divider {
@@ -57,7 +57,6 @@ img {
 }
 
 .date {
-
 }
 
 .body {
@@ -80,7 +79,7 @@ img {
 .content {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 16px;
-  line-height:22px;
+  line-height: 22px;
   display: -webkit-box;
   height: min-content;
   max-width: 100%;
@@ -111,7 +110,7 @@ img {
   font-weight: 300;
   padding: 8px;
   border-radius: 14px;
-  background-color:rgba(242, 242, 242, 1) ;
+  background-color: rgba(242, 242, 242, 1);
 }
 
 .timeToRead {
