--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anuphan:wght@500;600&family=Roboto+Slab:wght@300;400&family=Source+Sans+Pro:wght@300;400&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -19,7 +22,12 @@ a:focus,
 a:active {
   outline: none;
 }
-
+img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 nav,
 footer,
 header,
